--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,9 @@ chrono = { version = "0.4", features = ["serde"] }
 log = "0.4"
 env_logger = "0.10"
 dirs = "5.0"
+prost = "0.14.1"
+prost-types = "0.14.1"
+
+[build-dependencies]
+prost-build = "0.14.1"
 
